@@ -1,3 +1,6 @@
+2012-05-25 Tsi YANG <tsi@in-cite.net>
+	* Feature: Implemented TCA FE Admin hook to process tx_icsoddatastore_files field md5.
+
 2012-05-24 Tsi YANG <tsi@in-cite.net>
 	* Fix: Updated from TCA FE Admin.
 	* Update: Adjusted hook code because refactor ics_tcafe_admin.
